# merlin2

./: .gitignore  .gitmodules  LICENSE  README.md  install_dependencies.sh  requirements.txt  run_all_pytests.sh
custom_ros2/: README.md  package.xml  setup.cfg  setup.py
custom_ros2/custom_ros2/: __init__.py  action_client.py  action_queue_server.py  action_server.py  action_single_server.py  node.py
custom_ros2/custom_ros2/actions/: __init__.py
merlin2_action/merlin2_action/: merlin2_action.py
merlin2_arch/merlin2_arch_interfaces/: CMakeLists.txt  package.xml
merlin2_arch/merlin2_arch_interfaces/action/: DispatchAction.action  DispatchPlan.action  Execute.action
merlin2_arch/merlin2_arch_interfaces/srv/: GeneratePlan.srv
merlin2_arch/merlin2_executive_layer/: README.md
merlin2_arch/merlin2_executive_layer/merlin2_action/: CMakeLists.txt  package.xml  setup.cfg  setup.py
merlin2_arch/merlin2_executive_layer/merlin2_basic_actions/: package.xml  setup.cfg  setup.py
merlin2_arch/merlin2_executive_layer/merlin2_bt_action/: CMakeLists.txt  package.xml
merlin2_arch/merlin2_executive_layer/merlin2_bt_action/include/merlin2_bt_action/: merlin2_bt_action.hpp
merlin2_arch/merlin2_executive_layer/merlin2_bt_action/include/merlin2_bt_action/bt_nodes/: waypoint_navigation.hpp
merlin2_arch/merlin2_executive_layer/merlin2_bt_action/src/: merlin2_bt_action.cpp
merlin2_arch/merlin2_executive_layer/merlin2_bt_action/src/bt_nodes/: waypoint_navigation.cpp
merlin2_arch/merlin2_executive_layer/merlin2_executive_layer/: package.xml  setup.cfg  setup.py
merlin2_arch/merlin2_executive_layer/merlin2_fsm_action/: package.xml  setup.cfg  setup.py
merlin2_arch/merlin2_mission_layer/: README.md
merlin2_arch/merlin2_mission_layer/merlin2_goal_dispatcher/: package.xml  setup.cfg  setup.py
merlin2_arch/merlin2_mission_layer/merlin2_mission/: package.xml  setup.cfg  setup.py
merlin2_arch/merlin2_mission_layer/merlin2_mission/merlin2_mission/: __init__.py  merlin2_fsm_mission_node.py  merlin2_goal_dispatcher.py  merlin2_mission_node.py
merlin2_arch/merlin2_mission_layer/merlin2_mission_layer/: package.xml  setup.cfg  setup.py
merlin2_arch/merlin2_msgs/: CMakeLists.txt  package.xml
merlin2_arch/merlin2_msgs/action/: DispatchAction.action  DispatchPlan.action
merlin2_arch/merlin2_msgs/srv/: GeneratePlan.srv
merlin2_arch/merlin2_planning_layer/: README.md
merlin2_arch/merlin2_planning_layer/merlin2_executor/: package.xml  setup.cfg  setup.py
merlin2_arch/merlin2_planning_layer/merlin2_pddl_generator/: CMakeLists.txt  README.md  package.xml  (+1 more)
merlin2_arch/merlin2_planning_layer/merlin2_plan_dispatcher/: CMakeLists.txt  package.xml  setup.py
merlin2_arch/merlin2_planning_layer/merlin2_plan_dispatcher/merlin2_plan_dispatcher/: merlin2_plan_dispatcher_node.py
merlin2_arch/merlin2_planning_layer/merlin2_plan_dispatcher/tests/python/: run_pytests.sh  test_merlin2_plan_dispatcher.py
merlin2_arch/merlin2_reactive_layer/: README.md
merlin2_demo/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
merlin2_demo/include/merlin2_demo/: merlin2_navigation_bt_action.hpp
merlin2_demo/launch/: merlin2_demo.launch.py  merlin2_demo2.launch.py  merlin2_demo3.launch.py  merlin2_demo_launch.py  merlin2_mdpi_launch.py
merlin2_demo/merlin2_demo/: merlin2_check_door_fsm_action.py  merlin2_check_wp_action.py  merlin2_check_wp_fsm_action.py  merlin2_demo2_node.py  merlin2_demo3_node.py  merlin2_demo_node.py  merlin2_hi_navigation_action.py  merlin2_hi_navigation_fsm_action.py  merlin2_listen_audio_node.py  merlin2_mdpi_node.py  merlin2_navigation_fsm_action.py  pddl.py
merlin2_demo/params/: granny.yaml
merlin2_demo/results/: result.csv  results.jasp  results_granny_120.csv  results_granny_20.csv  results_granny_6.csv
merlin2_demo/src/: merlin2_navigation_bt_action.cpp
merlin2_demos/: CMakeLists.txt  README.md  package.xml
merlin2_demos/bt_xml/: navigation.xml
merlin2_demos/launch/: merlin2_demo1.launch.py  merlin2_demo2.launch.py  merlin2_demo3.launch.py
merlin2_demos/merlin2_demos/: merlin2_check_door_fsm_action.py  merlin2_check_wp_action.py  merlin2_check_wp_fsm_action.py  merlin2_demo2_node.py  merlin2_demo3_node.py  merlin2_demo_node.py  merlin2_hi_navigation_action.py  merlin2_hi_navigation_fsm_action.py  merlin2_listen_audio_node.py  merlin2_navigation_fsm_action.py  pddl.py
merlin2_demos/params/: granny.yaml
merlin2_demos/results/: merge_results.py  results.jasp  results_granny_120.csv  results_granny_20.csv  results_granny_6.csv
merlin2_demos/src/: merlin2_navigation_bt_action.cpp
merlin2_knowledge_base/merlin2_knowledge_base/: README.md  package.xml  setup.cfg  setup.py
merlin2_knowledge_base/merlin2_knowledge_base_interfaces/: CMakeLists.txt  package.xml
merlin2_plan_sys/: README.md  merlin2_plan_sys.drawio
merlin2_plan_sys/merlin2_executor/: package.xml  setup.py
merlin2_plan_sys/merlin2_pddl_generator/: README.md  package.xml  setup.cfg  setup.py
merlin2_plan_sys/merlin2_plan_dispatcher/: package.xml  setup.cfg  setup.py
merlin2_plan_sys/merlin2_plan_parser/: package.xml  setup.cfg  setup.py
merlin2_plan_sys/merlin2_plan_sys/: package.xml  setup.cfg  setup.py
merlin2_plan_sys/merlin2_plan_sys_interfaces/: CMakeLists.txt  package.xml
merlin2_plan_sys/merlin2_planner/: package.xml  setup.cfg  setup.py
pddl/pddl_dao/: README.md  setup.py
pddl/pddl_dto/: README.md  package.xml  setup.cfg  setup.py
pddl_dao/: README.md  package.xml  setup.cfg  setup.py  test_results  tests_results
ros1_node/: README.md  package.xml  setup.cfg  setup.py
ros1_node/ros1_node/: node.py
ros2_fsm/: README.md  install_viewer.sh
ros2_fsm/ros2_fsm/: package.xml  setup.cfg  setup.py
ros2_fsm/ros2_fsm_interfaces/: CMakeLists.txt  package.xml
ros2_fsm/ros2_fsm_viewer/: package.xml  setup.cfg  setup.py
ros2_fsm/ros2_fsm_viewer_web_client/: .eslintcache  package-lock.json  package.json
scrips/: install_mongo.sh  install_mongocxx.sh
threaded_node/: README.md  package.xml  setup.cfg  setup.py
threaded_node/threaded_node/: node.py
(+309 files in other folders)
